PA_Education/TestMenifest/force-app/main/default/objects/CheckResult__c/CheckResult__c.object-meta.xml
<CustomObject>
    <label>검사결과</label>
    <nameField>
        <label>검사결과 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>