PA_Education/TestMenifest/force-app/main/default/objects/CheckResult__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>검사결과</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>