PA_Education/TestMenifest/force-app/main/default/objects/CheckResult__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>검사내용</label>
    <length>80</length>
    <type>Text</type>
</CustomField>